--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		(например, является ли животное на рисунке кошкой или нет).
         </p>
 		
-		<img src="img/perceptron.bmp" weight="">
+		<img src="img/perceptron.bmp">
 		
 		<h2>Как работает персептрон</h2>
 
@@ -61,6 +61,8 @@
 		Сеть продолжает играть в пинг-понг, пока погрешность 
 		не исчезнет. В этом случае, как говорят, наступает сходимость.
 		</p>
+		
+		<p><a href="https://cataxex.github.io/Pascal/">Посетить сайт "Паскаль"</a></p>
 		
 		<h3>Источьники:<h3>
 		<a href="https://neurohive.io/ru/osnovy-data-science/perseptron-rozenblatta-mashina-kotoraja-smogla-obuchatsja/#:~:text=Персептрон%20–%20это%20нейронная%20сеть%2C,на%20рисунке%20кошкой%20или%20нет)">Персептрон Розенблатта</a>
