--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 		</p>
 		
 		<p><a href="https://cataxex.github.io/Pascal/">Посетить сайт "Паскаль"</a></p>
+	    	<p><a href="https://cataxex.github.io/C-/">Посетить сайт "C#"</a></p>
 		
 		<h3>Источьники:<h3>
 		<a href="https://neurohive.io/ru/osnovy-data-science/perseptron-rozenblatta-mashina-kotoraja-smogla-obuchatsja/#:~:text=Персептрон%20–%20это%20нейронная%20сеть%2C,на%20рисунке%20кошкой%20или%20нет)">Персептрон Розенблатта</a>
