--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Perceptron</title>
 </head>
 <body background="img/wallpaper.jpg">
-    <header>
+    <header class="header">
         <h1>Персептрон</h1>
+		<p class="paskal"><a href="https://cataxex.github.io/Pascal/">Паскаль</a></p>
+		<p class="C"><a href="https://cataxex.github.io/C-/">C#</a></p>
     </header>
     <main>
         <p class="text"><b>Персептрон</b> – это нейронная сеть, которая 
@@ -61,9 +63,6 @@
 		Сеть продолжает играть в пинг-понг, пока погрешность 
 		не исчезнет. В этом случае, как говорят, наступает сходимость.
 		</p>
-		
-		<p><a href="https://cataxex.github.io/Pascal/">Посетить сайт "Паскаль"</a></p>
-	    	<p><a href="https://cataxex.github.io/C-/">Посетить сайт "C#"</a></p>
 		
 		<h3>Источьники:<h3>
 		<a href="https://neurohive.io/ru/osnovy-data-science/perseptron-rozenblatta-mashina-kotoraja-smogla-obuchatsja/#:~:text=Персептрон%20–%20это%20нейронная%20сеть%2C,на%20рисунке%20кошкой%20или%20нет)">Персептрон Розенблатта</a>
