--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Perceptron</title>
 </head>
 <body background="img/wallpaper.jpg">
-    <header class="header">
+    <header>
         <h1>Персептрон</h1>
 		<p class="paskal"><a href="https://cataxex.github.io/Pascal/">Паскаль</a></p>
 		<p class="C"><a href="https://cataxex.github.io/C-/">C#</a></p>
@@ -35,7 +35,7 @@
 		алгоритм обратного распространения, а сама 
 		погрешность может быть вычислена различными 
 		способами, в том числе путем вычисления 
-		среднеквадратичного отклонения (RMSE).
+		среднеквадратичного отклонения (RMSE).</p>
 		
 		<p>Сети прямого распространения, 
 		такие как многослойный персептрон, похожи на теннис или пинг-понг.
@@ -63,8 +63,8 @@
 		Сеть продолжает играть в пинг-понг, пока погрешность 
 		не исчезнет. В этом случае, как говорят, наступает сходимость.
 		</p>
-		
-		<h3>Источьники:<h3>
+
+		<h3>Источьники:</h3>
 		<a href="https://neurohive.io/ru/osnovy-data-science/perseptron-rozenblatta-mashina-kotoraja-smogla-obuchatsja/#:~:text=Персептрон%20–%20это%20нейронная%20сеть%2C,на%20рисунке%20кошкой%20или%20нет)">Персептрон Розенблатта</a>
     </main>
 </body>
