--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perceptron</title>
 </head>
-<body background="img/wallpaper.jpg">
+<body>
     <header>
         <h1>Персептрон</h1>
 		<p class="paskal"><a href="https://cataxex.github.io/Pascal/">Паскаль</a></p>
